Added Satori's gender and pronouns (and added descriptive class names for the usage examples)

--- a/html/obsidianrat.html
+++ b/html/obsidianrat.html
@@ -106,7 +106,7 @@
             </p>
             <p>
               ※代名詞は「あたい」である。<br>
-              『com』使用のたとえば：「<span class="neopronoun-demo"><em>Com</em> is talking with <em>cometself</em> about <em>comets</em> day. But who is answering <em>comet</em>, though?</span>」
+              『com』使用のたとえば：「<span class="neopronoun-demo"><em class="subjective-pronoun">Com</em> is talking with <em class="reflexive-pronoun">cometself</em> about <em class="possessive-determiner-pronoun">comets</em> day. But who is answering <em class="objective-pronoun">comet</em>, though?</span>」
             </p>
           </div>
         </div>
@@ -544,15 +544,15 @@
             <h4 id="Satori_Shuuyuu">臭鼬悟狸</h4>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-              <p class="pronouns">代名詞：</p>
-              <!-- Pride template / Pride flag placeholder :3 -->
+              <p class="pronouns">代名詞：spark/sparks/sparkleself</p>
+              <!-- スパークルジェンダー（Sparklegender） -->
               <div class="container">
-                <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                  <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+                <a href="https://mogai-genders.fandom.com/wiki/Sparklegender" title="スパークルジェンダー" target="_blank">
+                  <img class="pride-flag image" src="../img/pride/xeno/Sparklegender.png" alt="スパークルジェンダー" title="スパークルジェンダー（Sparklegender）">
                 </a>
                 <div class="middle">
                   <div class="text">
-                    プライド
+                    スパークルジェンダー
                   </div>
                 </div>
               </div>
@@ -572,8 +572,8 @@
             </p>
             <p>
               性別：<br>
-              性自認：<br>
-              代名詞：<br>
+              性自認：スパークルジェンダー<br>
+              代名詞：<ruby>奴<rt>スパーク</rt></ruby>／<ruby>奴<rt>スパークス</rt></ruby>／<ruby>奴自身<rt>スパークルセルフ</rt></ruby>（spark/sparks/sparkleself）<br>
               雌雄性：
             </p>
             <p>
@@ -582,7 +582,10 @@
             </p>
             <p>家族：</p>
             <p>ライラックの一匹使い魔である。臭鼬悟貍が生まれた。</p>
-            <p>※代名詞は「？」である。ピンインに「<span lang="zh-Latn" class="latin-font">Chòuyòu Wùlí</span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="latin-font">Chowyow Wuhli</span>」で書く。ウェード式に「<span lang="zh-Latn" class="latin-font">Chʻou<sup>4</sup>-yu<sup>4</sup> Wu<sup>4</sup>-li<sup>2</sup></span>」で書く。繁体字に「<span lang="zh-Hant" class="traditional-hanzi-font" title="Traditional Chinese text">臭鼬悟貍</span>」を書く。簡体字に「<span lang="zh-Hans" class="simplified-hanzi-font" title="Simplified Chinese text">臭鼬悟狸</span>」で書く。</p>
+            <p>
+              ※代名詞は「？」である。ピンインに「<span lang="zh-Latn" class="latin-font" title="Pinyin">Chòuyòu Wùlí</span>」で書く。ウェード式に「<span lang="zh-Latn" class="latin-font" title="Wade-Giles">Chʻou<sup>4</sup>-yu<sup>4</sup> Wu<sup>4</sup>-li<sup>2</sup></span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="latin-font" title="Gwoyeu Romatzyh">Chowyow Wuhli</span>」で書く。繁体字に「<span lang="zh-Hant" class="traditional-hanzi-font" title="Traditional Chinese text">臭鼬悟貍</span>」を書く。簡体字に「<span lang="zh-Hans" class="simplified-hanzi-font" title="Simplified Chinese text">臭鼬悟狸</span>」で書く。<br>
+              『spark』使用のたとえば：「<span class="neopronoun-demo"><em class="subjective-pronoun">Spark</em> is talking with <em class="reflexive-pronoun">sparkleself</em> about <em class="possessive-determiner-pronoun">sparkles</em> day. But who is answering <em class="objective-pronoun">sparks</em>, though?</span>」
+            </p>
           </div>
         </div>
       </section>
