NSFW Changes I: Niji's Creations

--- a/html/gallery/nizi/Bolormaa.html
+++ b/html/gallery/nizi/Bolormaa.html
@@ -54,8 +54,7 @@
       <!-- 美術品（All Art） -->
       <section class="gallery" id="美術品">
         <h2 class="art-heading">美術品</h2><hr>
-        <button type="button" onclick="hideNotSafeForWork()">ＮＳＦＷを隠す</button>
-        <button type="button" onclick="showNotSafeForWork()">ＮＳＦＷを現す</button>
+        <button type="button" onclick="toggleNSFW()">ＮＳＦＷをトグル</button>
         <div class="flex-gallery" id="Flexbox 【美術品】">
           <div class="art-gallery" id="Short or Long - Bolormaa (ᠪᠣᠯᠤᠷᠮᠠ)">
             <img class="gallery-art" src="../../../img/gallery/Bolormaa/Short or Long - Bolormaa (ᠪᠣᠯᠤᠷᠮᠠ).png" alt="Short or Long - Bolormaa (ᠪᠣᠯᠤᠷᠮᠠ)">
