--- a/html/gallery/nizi/Hap_P._Emo-shun.html
+++ b/html/gallery/nizi/Hap_P._Emo-shun.html
@@ -54,8 +54,7 @@
       <!-- 美術品（All Art） -->
       <section class="gallery" id="美術品">
         <h2 class="art-heading">美術品</h2><hr>
-        <button type="button" onclick="hideNotSafeForWork()">ＮＳＦＷを隠す</button>
-        <button type="button" onclick="showNotSafeForWork()">ＮＳＦＷを現す</button>
+        <button type="button" onclick="toggleNSFW()">ＮＳＦＷをトグル</button>
         <div class="flex-gallery" id="Flexbox 【美術品】">
           <div class="art-gallery" id="Emotions_feat._Hap_P._Emo-Shun">
             <img class="gallery-art" style="height: 192px" src="../../../img/gallery/Hap_P._Emo-shun/Emotions feat. Hap P. Emo-Shun.png" alt="Emotions feat. Hap P. Emo-Shun">
