--- a/html/gallery/nizi/Kiyoi.html
+++ b/html/gallery/nizi/Kiyoi.html
@@ -55,9 +55,8 @@
       <section class="gallery" id="美術品">
         <h2 class="art-heading">美術品</h2><hr>
         <!-- No NSFW of Kiyoi will ever exist.
-         I'm just including these buttons for consistency -->
-        <button type="button" onclick="hideNotSafeForWork()">ＮＳＦＷを隠す</button>
-        <button type="button" onclick="showNotSafeForWork()">ＮＳＦＷを現す</button>
+         I'm just including the button for consistency -->
+        <button type="button" onclick="toggleNSFW()">ＮＳＦＷをトグル</button>
         <div class="flex-gallery" id="Flexbox 【美術品】">
           <div class="art-gallery" id="清（PC-98版）">
             <img class="gallery-art" src="../../../img/gallery/Kiyoi/清（PC-98版）.png" alt="清（PC-98版）">
