Got the NSFW toggle actually working now; Added noNsfw() and nsfwNiceTry() functions

--- a/html/gallery/nizi/Bolormaa.html
+++ b/html/gallery/nizi/Bolormaa.html
@@ -54,7 +54,10 @@
       <!-- 美術品（All Art） -->
       <section class="gallery" id="美術品">
         <h2 class="art-heading">美術品</h2><hr>
-        <button type="button" onclick="toggleNSFW()">ＮＳＦＷをトグル</button>
+        <button type="button" onclick="noNsfw()">ＮＳＦＷをトグル</button>
+        <div id="NoNsfw">
+          <p>ＮＳＦＷではないね。</p>
+        </div>
         <div class="flex-gallery" id="Flexbox 【美術品】">
           <div class="art-gallery" id="Short or Long - Bolormaa (ᠪᠣᠯᠤᠷᠮᠠ)">
             <img class="gallery-art" src="../../../img/gallery/Bolormaa/Short or Long - Bolormaa (ᠪᠣᠯᠤᠷᠮᠠ).png" alt="Short or Long - Bolormaa (ᠪᠣᠯᠤᠷᠮᠠ)">
