--- a/html/gallery/nizi/Kiyoi.html
+++ b/html/gallery/nizi/Kiyoi.html
@@ -55,8 +55,11 @@
       <section class="gallery" id="美術品">
         <h2 class="art-heading">美術品</h2><hr>
         <!-- No NSFW of Kiyoi will ever exist.
-         I'm just including the button for consistency -->
-        <button type="button" onclick="toggleNSFW()">ＮＳＦＷをトグル</button>
+        I'm just including the button for consistency -->
+        <button type="button" onclick="nsfwNiceTry()">ＮＳＦＷをトグル</button>
+        <div id="YouSickFuck">
+          <p>(T_T)</p>
+        </div>
         <div class="flex-gallery" id="Flexbox 【美術品】">
           <div class="art-gallery" id="清（PC-98版）">
             <img class="gallery-art" src="../../../img/gallery/Kiyoi/清（PC-98版）.png" alt="清（PC-98版）">
