--- a/html/gallery/nizi/Wamo.html
+++ b/html/gallery/nizi/Wamo.html
@@ -54,7 +54,10 @@
       <!-- 美術品（All Art） -->
       <section class="gallery" id="美術品">
         <h2 class="art-heading">美術品</h2><hr>
-        <button type="button" onclick="toggleNSFW()">ＮＳＦＷをトグル</button>
+        <button type="button" onclick="noNsfw()">ＮＳＦＷをトグル</button>
+        <div id="NoNsfw">
+          <p>ＮＳＦＷではないね。</p>
+        </div>
         <div class="flex-gallery" id="Flexbox 【美術品】">
           <div class="art-gallery" id="ワーモ（PC-98版）">
             <img class="gallery-art" src="../../../img/gallery/Wamo/ワーモ（PC-98版）.png" alt="ワーモ（PC-98版）">
