--- a/html/gallery/nizi/ʿAyn.html
+++ b/html/gallery/nizi/ʿAyn.html
@@ -54,7 +54,10 @@
       <!-- 美術品（All Art） -->
       <section class="gallery" id="美術品">
         <h2 class="art-heading">美術品</h2><hr>
-        <button type="button" onclick="toggleNSFW()">ＮＳＦＷをトグル</button>
+        <button type="button" onclick="noNsfw()">ＮＳＦＷをトグル</button>
+        <div id="NoNsfw">
+          <p>ＮＳＦＷではないね。</p>
+        </div>
         <div class="flex-gallery" id="Flexbox 【美術品】">
           <div class="art-gallery" id="Biblically Accurate Angel">
             <img class="gallery-art" src="../../../img/gallery/ʿAyn/Biblically Accurate Angel.png" alt="Biblically Accurate Angel">
