Redid NSFW toggle II

--- a/html/gallery/nizi/Kiyoi.html
+++ b/html/gallery/nizi/Kiyoi.html
@@ -56,7 +56,7 @@
         <h2 class="art-heading">美術品</h2><hr>
         <!-- No NSFW of Kiyoi will ever exist.
         I'm just including the button for consistency -->
-        <button type="button" onclick="nsfwNiceTry()">ＮＳＦＷをトグル</button>
+        <button id="NsfwControl" type="button" onclick="nsfwNiceTry()">ＮＳＦＷをトグル</button>
         <div id="YouSickFuck">
           <p>(T_T)</p>
         </div>
