--- a/html/gallery/nizi/Scarlett_Williams.html
+++ b/html/gallery/nizi/Scarlett_Williams.html
@@ -54,7 +54,7 @@
       <!-- 美術品（All Art） -->
       <section class="gallery" id="美術品">
         <h2 class="art-heading">美術品</h2><hr>
-        <button type="button" onclick="noNsfw()">ＮＳＦＷをトグル</button>
+        <button id="NsfwControl" type="button" onclick="noNsfw()">ＮＳＦＷをトグル</button>
         <div id="NoNsfw">
           <p>ＮＳＦＷではないね。</p>
         </div>
