--- a/html/gallery/spalmea/Sonja_Östlund.html
+++ b/html/gallery/spalmea/Sonja_Östlund.html
@@ -54,8 +54,10 @@
       <!-- 美術品（All Art） -->
       <section class="gallery" id="美術品">
         <h2 class="art-heading">美術品</h2><hr>
-        <button type="button" onclick="hideNotSafeForWork()">ＮＳＦＷを隠す</button>
-        <button type="button" onclick="showNotSafeForWork()">ＮＳＦＷを現す</button>
+        <button id="NsfwControl" type="button" onclick="noNsfw()">ＮＳＦＷをトグル</button>
+        <div id="NoNsfw">
+          <p>ＮＳＦＷではないね。</p>
+        </div>s
         <div class="flex-gallery" id="Flexbox 【美術品】">
         </div>
       </section>
