--- a/html/gallery/ushie/Shino_Sakurasame.html
+++ b/html/gallery/ushie/Shino_Sakurasame.html
@@ -54,8 +54,10 @@
       <!-- 美術品（All Art） -->
       <section class="gallery" id="美術品">
         <h2 class="art-heading">美術品</h2><hr>
-        <button type="button" onclick="hideNotSafeForWork()">ＮＳＦＷを隠す</button>
-        <button type="button" onclick="showNotSafeForWork()">ＮＳＦＷを現す</button>
+        <button id="NsfwControl" type="button" onclick="nsfwNiceTry()">ＮＳＦＷをトグル</button>
+        <div id="YouSickFuck">
+          <p>(T_T)</p>
+        </div>
         <div class="flex-gallery" id="Flexbox 【美術品】">
           <div class="art-gallery" id="あめ、だいすき - Rainy Day">
             <img class="gallery-art" src="../../../img/gallery/Shino_Sakurasame/Shino_Sakurasame_00.png" alt="あめ、だいすき - Rainy Day">
