--- a/html/gallery/ushie/Zhāng_Língxín.html
+++ b/html/gallery/ushie/Zhāng_Língxín.html
@@ -54,14 +54,13 @@
       <!-- 美術品（All Art） -->
       <section class="gallery" id="美術品">
         <h2 class="art-heading">美術品</h2><hr>
-        <button type="button" onclick="hideNotSafeForWork()">ＮＳＦＷを隠す</button>
-        <button type="button" onclick="showNotSafeForWork()">ＮＳＦＷを現す</button>
+        <button id="NsfwControl" type="button" onclick="toggleDisplayByClass('NsfwControl','nsfw')">ＮＳＦＷをトグル</button>
         <div class="flex-gallery" id="Flexbox 【美術品】">
           <div class="art-gallery" id="張靈尋（Zhang Lingxin）">
             <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_00.png" alt="張靈尋（Zhang Lingxin）">
             <p class="caption">張靈尋（Zhang Lingxin）</p>
           </div>
-          <div id="nsfw0">
+          <div class="nsfw">
             <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【経鼻胃管】">
               <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_01.png" alt="張靈尋（Zhang Lingxin） 【経鼻胃管】">
               <p class="caption">張靈尋（Zhang Lingxin） 【経鼻胃管】</p>
@@ -71,7 +70,7 @@
             <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_02.png" alt="張靈尋（Zhang Lingxin） 【O_O】">
             <p class="caption">張靈尋（Zhang Lingxin） 【O_O】</p>
           </div>
-          <div id="nsfw1">
+          <div class="nsfw">
             <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【心電図】">
               <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_03.png" alt="張靈尋（Zhang Lingxin） 【心電図】">
               <p class="caption">張靈尋（Zhang Lingxin） 【心電図】</p>
@@ -85,91 +84,91 @@
             <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_05.png" alt="張靈尋（Zhang Lingxin） 【閉じた目；-_-】">
             <p class="caption">張靈尋（Zhang Lingxin） 【閉じた目；-_-】</p>
           </div>
-          <div id="nsfw2">
+          <div class="nsfw">
             <div class="art-gallery" id="張靈尋（Zhang Lingxin）【テープして閉じた目（上下）】">
               <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_06.png" alt="張靈尋（Zhang Lingxin）【テープして閉じた目（上下）】">
               <p class="caption">張靈尋（Zhang Lingxin）【テープして閉じた目（上下）】</p>
             </div>
           </div>
-          <div id="nsfw3">
+          <div class="nsfw">
             <div class="art-gallery" id="張靈尋（Zhang Lingxin）【テープして閉じた目（水平）】">
               <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_07.png" alt="張靈尋（Zhang Lingxin）【テープして閉じた目（水平）】">
               <p class="caption">張靈尋（Zhang Lingxin）【テープして閉じた目（水平）】</p>
             </div>
           </div>
-          <div id="nsfw4">
+          <div class="nsfw">
             <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【酸素マスク】">
               <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_08.png" alt="張靈尋（Zhang Lingxin） 【酸素マスク】">
               <p class="caption">張靈尋（Zhang Lingxin） 【酸素マスク】</p>
             </div>
           </div>
-          <div id="nsfw5">
+          <div class="nsfw">
             <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【酸素マスク；O_O】">
               <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_09.png" alt="張靈尋（Zhang Lingxin） 【酸素マスク；O_O】">
               <p class="caption">張靈尋（Zhang Lingxin） 【酸素マスク；O_O】</p>
             </div>
           </div>
-          <div id="nsfw6">
+          <div class="nsfw">
             <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【気管挿管】">
               <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_10.png" alt="張靈尋（Zhang Lingxin） 【気管挿管】">
               <p class="caption">張靈尋（Zhang Lingxin） 【気管挿管】</p>
             </div>
           </div>
-          <div id="nsfw7">
+          <div class="nsfw">
             <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【気管挿管；閉じた目】">
               <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_11.png" alt="張靈尋（Zhang Lingxin） 【気管挿管；閉じた目】">
               <p class="caption">張靈尋（Zhang Lingxin） 【気管挿管；閉じた目】</p>
             </div>
           </div>
-          <div id="nsfw8">
+          <div class="nsfw">
             <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【気管挿管；テープして閉じた目（水平）】">
               <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_12.png" alt="張靈尋（Zhang Lingxin） 【気管挿管；テープして閉じた目（水平）】">
               <p class="caption">張靈尋（Zhang Lingxin） 【気管挿管；テープして閉じた目（水平）】</p>
             </div>
           </div>
-          <div id="nsfw9">
+          <div class="nsfw">
             <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【気管挿管；テープして閉じた目（上下）】">
               <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_13.png" alt="張靈尋（Zhang Lingxin） 【気管挿管；テープして閉じた目（上下）】">
               <p class="caption">張靈尋（Zhang Lingxin） 【気管挿管；テープして閉じた目（上下）】</p>
             </div>
           </div>
-          <div id="nsfw10">
+          <div class="nsfw">
             <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【気管挿管；心電図】">
               <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_14.png" alt="張靈尋（Zhang Lingxin） 【気管挿管；心電図】">
               <p class="caption">張靈尋（Zhang Lingxin） 【気管挿管；心電図】</p>
             </div>
           </div>
-          <div id="nsfw11">
+          <div class="nsfw">
             <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【気管挿管；心電図；閉じた目】">
               <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_15.png" alt="張靈尋（Zhang Lingxin） 【気管挿管；心電図；閉じた目】">
               <p class="caption">張靈尋（Zhang Lingxin） 【気管挿管；心電図；閉じた目】</p>
             </div>
           </div>
-          <div id="nsfw12">
+          <div class="nsfw">
             <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【酸素マスク；心電図】">
               <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_16.png" alt="張靈尋（Zhang Lingxin） 【酸素マスク；心電図】">
               <p class="caption">張靈尋（Zhang Lingxin） 【酸素マスク；心電図】</p>
             </div>
           </div>
-          <div id="nsfw13">
+          <div class="nsfw">
             <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【酸素マスク；心電図；O_O】">
               <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_17.png" alt="張靈尋（Zhang Lingxin） 【酸素マスク；心電図；O_O】">
               <p class="caption">張靈尋（Zhang Lingxin） 【酸素マスク；心電図；O_O】</p>
             </div>
           </div>
-          <div id="nsfw14">
+          <div class="nsfw">
             <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【酸素マスク；心電図；-_-；テープして閉じた目（水平）】">
               <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_18.png" alt="張靈尋（Zhang Lingxin） 【酸素マスク；心電図；-_-；テープして閉じた目（水平）】">
               <p class="caption">張靈尋（Zhang Lingxin） 【酸素マスク；心電図；-_-；テープして閉じた目（水平）】</p>
             </div>
           </div>
-          <div id="nsfw15">
+          <div class="nsfw">
             <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【気管挿管；経鼻胃管；心電図；テープして閉じた目（水平）】">
               <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_19.png" alt="張靈尋（Zhang Lingxin） 【気管挿管；経鼻胃管；心電図；テープして閉じた目（水平）】">
               <p class="caption">張靈尋（Zhang Lingxin） 【気管挿管；経鼻胃管；心電図；テープして閉じた目（水平）】</p>
             </div>
           </div>
-          <div id="nsfw16">
+          <div class="nsfw">
             <div class="art-gallery" id="張靈尋（Zhang Lingxin） 【気管挿管；経鼻胃管；心電図；心静止；テープして閉じた目（水平）】">
               <img class="gallery-art" src="../../../img/gallery/Zhāng_Língxín/Zhāng_Língxín_20.png" alt="張靈尋（Zhang Lingxin） 【気管挿管；経鼻胃管；心電図；心静止；テープして閉じた目（水平）】">
               <p class="caption">張靈尋（Zhang Lingxin） 【気管挿管；経鼻胃管；心電図；心静止；テープして閉じた目（水平）】</p>
