Added alternate-font class for headings; fixed heading hierarchy

--- a/html/bingyan.html
+++ b/html/bingyan.html
@@ -53,7 +53,7 @@
             <button class="accordion">艾鬼影</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Ài_Guǐyǐng">艾鬼影</h4>
+                <h3 id="Ài_Guǐyǐng" class="alternate-font">艾鬼影</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -102,7 +102,7 @@
             <button class="accordion">李藍紀</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Lǐ_Lánjǐ">李藍紀</h4>
+                <h3 id="Lǐ_Lánjǐ" class="alternate-font">李藍紀</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -151,7 +151,7 @@
             <button class="accordion">梁丘城</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Liángqiū_Chéng">梁丘城</h4>
+                <h3 id="Liángqiū_Chéng" class="alternate-font">梁丘城</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -216,7 +216,7 @@
             <button class="accordion">梅樹人</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Méi_Shùrén">梅樹人</h4>
+                <h3 id="Méi_Shùrén" class="alternate-font">梅樹人</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -272,7 +272,7 @@
             <button class="accordion">混沌</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Hùndùn">混沌</h4>
+                <h3 id="Hùndùn" class="alternate-font">混沌</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -321,7 +321,7 @@
             <button class="accordion">琴朝</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Qín_Cháo">琴朝</h4>
+                <h3 id="Qín_Cháo" class="alternate-font">琴朝</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -371,7 +371,7 @@
             <button class="accordion">窮奇人殺丸</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Qióngqí_Jinsatsumaru">窮奇人殺丸</h4>
+                <h3 id="Qióngqí_Jinsatsumaru" class="alternate-font">窮奇人殺丸</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -420,7 +420,7 @@
             <button class="accordion">饕餮食雲</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Tāotiè_Kukumo">饕餮食雲</h4>
+                <h3 id="Tāotiè_Kukumo" class="alternate-font">饕餮食雲</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -470,7 +470,7 @@
             <button class="accordion">檮杌馬鹿模</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Táowù_Bakamo">檮杌馬鹿模</h4>
+                <h3 id="Táowù_Bakamo" class="alternate-font">檮杌馬鹿模</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -519,7 +519,7 @@
             <button class="accordion">學苗</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Xuémiáo">學苗</h4>
+                <h3 id="Xuémiáo" class="alternate-font">學苗</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -575,7 +575,7 @@
             <button class="accordion">安抗仙</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Ān_Kàngxiān">安抗仙</h4>
+                <h3 id="Ān_Kàngxiān" class="alternate-font">安抗仙</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -624,7 +624,7 @@
             <button class="accordion">水慧</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Shuǐ_Huì">水慧</h4>
+                <h3 id="Shuǐ_Huì" class="alternate-font">水慧</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -673,7 +673,7 @@
             <button class="accordion">莊芳</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Zhuāng_Fāng">莊芳</h4>
+                <h3 id="Zhuāng_Fāng" class="alternate-font">莊芳</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -729,7 +729,7 @@
             <button class="accordion">巴修影</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Bā_Xiūyǐng">巴修影</h4>
+                <h3 id="Bā_Xiūyǐng" class="alternate-font">巴修影</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -778,7 +778,7 @@
             <button class="accordion">紅桁</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Hóng_Héng">紅桁</h4>
+                <h3 id="Hóng_Héng" class="alternate-font">紅桁</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -827,7 +827,7 @@
             <button class="accordion">令狐柳仙</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Lìnghú_Liǔxiān">令狐柳仙</h4>
+                <h3 id="Lìnghú_Liǔxiān" class="alternate-font">令狐柳仙</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -876,7 +876,7 @@
             <button class="accordion">齊姜</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Qí_Jiāng">齊姜</h4>
+                <h3 id="Qí_Jiāng" class="alternate-font">齊姜</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -925,7 +925,7 @@
             <button class="accordion">葉福恆</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Yè_Fúhéng">葉福恆</h4>
+                <h3 id="Yè_Fúhéng" class="alternate-font">葉福恆</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -974,7 +974,7 @@
             <button class="accordion">鄒鳳苗</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Zōu_Fèngmiáo">鄒鳳苗</h4>
+                <h3 id="Zōu_Fèngmiáo" class="alternate-font">鄒鳳苗</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -1030,7 +1030,7 @@
             <button class="accordion">金平春</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Jīnpíng_Chūn">金平春</h4>
+                <h3 id="Jīnpíng_Chūn" class="alternate-font">金平春</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -1079,7 +1079,7 @@
             <button class="accordion">長孫學風</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Zhǎngsūn_Xuéfēng">長孫學風</h4>
+                <h3 id="Zhǎngsūn_Xuéfēng" class="alternate-font">長孫學風</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -1135,7 +1135,7 @@
             <button class="accordion">林田龍</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Lín_Tiánlóng">林田龍</h4>
+                <h3 id="Lín_Tiánlóng" class="alternate-font">林田龍</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -1198,7 +1198,7 @@
             <button class="accordion">壤駟虹珠</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Rǎngsì_Hóngzhū">壤駟虹珠</h4>
+                <h3 id="Rǎngsì_Hóngzhū" class="alternate-font">壤駟虹珠</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -1259,7 +1259,7 @@
             <button class="accordion">上官羅陽</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Shàngguān_Luóyáng">上官羅陽</h4>
+                <h3 id="Shàngguān_Luóyáng" class="alternate-font">上官羅陽</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -1325,7 +1325,7 @@
             <button class="accordion">孫小伊蘇</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Sūn_Koiso">孫小伊蘇</h4>
+                <h3 id="Sūn_Koiso" class="alternate-font">孫小伊蘇</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -1376,7 +1376,7 @@
             <button class="accordion">孫呂齊</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Sūn_Lǚqí">孫呂齊</h4>
+                <h3 id="Sūn_Lǚqí" class="alternate-font">孫呂齊</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -1426,7 +1426,7 @@
             <button class="accordion">孫來蝶</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Sūn_Raicho">孫來蝶</h4>
+                <h3 id="Sūn_Raicho" class="alternate-font">孫來蝶</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -1477,7 +1477,7 @@
             <button class="accordion">孫薛剛</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Sūn_Xuēgāng">孫薛剛</h4>
+                <h3 id="Sūn_Xuēgāng" class="alternate-font">孫薛剛</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：zhe/cold</p>
@@ -1537,7 +1537,7 @@
             <button class="accordion">孫夕紀字乃</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Sūn_Yukijino">孫夕紀字乃</h4>
+                <h3 id="Sūn_Yukijino" class="alternate-font">孫夕紀字乃</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
@@ -1588,7 +1588,7 @@
             <button class="accordion">熊之好</button>
             <div class="panel">
               <div class="containment-unit">
-                <h4 id="Xióng_Zhīhǎo">熊之好</h4>
+                <h3 id="Xióng_Zhīhǎo" class="alternate-font">熊之好</h3>
                 <div class="pride">
                   <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
                   <p class="pronouns">代名詞：</p>
