--- a/html/ibarasaki.html
+++ b/html/ibarasaki.html
@@ -1553,7 +1553,7 @@
         <button class="accordion">鐘振江</button>
         <div class="panel">
           <div class="containment-unit">
-            <h2 id="Chiong_Chín-kang">鐘振江</h2>
+            <h2 id="Chiong_Chín-kang" class="alternate-font">鐘振江</h2>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -2767,7 +2767,7 @@
         <button class="accordion">公孫黄仲</button>
         <div class="panel">
           <div class="containment-unit">
-            <h2 id="Gōngsūn_Huángzhòng">公孫黃仲</h2>
+            <h2 id="Gōngsūn_Huángzhòng" class="alternate-font">公孫黃仲</h2>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -4045,7 +4045,7 @@
         <button class="accordion">紀吐瀉</button>
         <div class="panel">
           <div class="containment-unit">
-            <h2 id="Jǐ_Tǔxiè">紀吐瀉</h2>
+            <h2 id="Jǐ_Tǔxiè" class="alternate-font">紀吐瀉</h2>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -4724,7 +4724,7 @@
         <button class="accordion">狂毒蟲</button>
         <div class="panel">
           <div class="containment-unit">
-            <h2 id="Kwòhng_Duhkchùhng">狂毒蟲</h2>
+            <h2 id="Kwòhng_Duhkchùhng" class="alternate-font">狂毒蟲</h2>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -5109,7 +5109,7 @@
         <button class="accordion">呂煤氣</button>
         <div class="panel">
           <div class="containment-unit">
-            <h2 id="Lǚ_Méiqì">呂煤氣</h2>
+            <h2 id="Lǚ_Méiqì" class="alternate-font">呂煤氣</h2>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -5641,7 +5641,7 @@
         <button class="accordion">毛德蘭</button>
         <div class="panel">
           <div class="containment-unit">
-            <h2 id="Máo_Délán">毛德蘭</h2>
+            <h2 id="Máo_Délán" class="alternate-font">毛德蘭</h2>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -6226,7 +6226,7 @@
         <button class="accordion">樂菜</button>
         <div class="panel">
           <div class="containment-unit">
-            <h2 id="Ngo̍k_Chhoi">樂菜</h2>
+            <h2 id="Ngo̍k_Chhoi" class="alternate-font">樂菜</h2>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -7002,7 +7002,7 @@
         <button class="accordion">汝競標</button>
         <div class="panel">
           <div class="containment-unit">
-            <h2 id="Rǔ_Jìngbiāo">汝競標</h2>
+            <h2 id="Rǔ_Jìngbiāo" class="alternate-font">汝競標</h2>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -7344,7 +7344,7 @@
         <button class="accordion">申屠光江</button>
         <div class="panel">
           <div class="containment-unit">
-            <h2 id="Shēntú_Guāngjiāng">申屠光江</h2>
+            <h2 id="Shēntú_Guāngjiāng" class="alternate-font">申屠光江</h2>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
@@ -8899,7 +8899,7 @@
         <button class="accordion">魚讖</button>
         <div class="panel">
           <div class="containment-unit">
-            <h2 id="Yú_Chèn">魚讖</h2>
+            <h2 id="Yú_Chèn" class="alternate-font">魚讖</h2>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
