--- a/html/nizi.html
+++ b/html/nizi.html
@@ -55,7 +55,7 @@
           <!-- 虹川郷鬼（Satoki Nijikawa） -->
           <section>
             <div class="containment-unit">
-              <h4 id="Satoki_Nijikawa">虹川郷鬼</h4>
+              <h3 id="Satoki_Nijikawa">虹川郷鬼</h3>
               <button type="button" onclick="hideSatoki()">郷鬼を隠す</button>
               <button type="button" onclick="revealSatoki()">郷鬼を現す</button>
               <div id="SatokiNijikawa">
@@ -145,7 +145,7 @@
           <!-- ワーモ（Wamo｜ཝ་མོ་｜wa mo） -->
           <section>
             <div class="containment-unit">
-              <h4 id="Wamo">ワーモ</h4>
+              <h3 id="Wamo">ワーモ</h3>
               <button type="button" onclick="hideWamo()">ワーモを隠す</button>
               <button type="button" onclick="revealWamo()">ワーモを現す</button>
               <div id="wamo">
@@ -233,7 +233,7 @@
           <!-- 清（Kiyoi） -->
           <section>
             <div class="containment-unit">
-              <h4 id="Kiyoi">清</h4>
+              <h3 id="Kiyoi">清</h3>
               <button type="button" onclick="hideKiyoi()">清を隠す</button>
               <button type="button" onclick="revealKiyoi()">清を現す</button>
               <div id="kiyoi">
@@ -314,7 +314,7 @@
           <!-- 妖狐（Youko） -->
           <section>
             <div class="containment-unit">
-              <h4 id="Youko">妖狐</h4>
+              <h3 id="Youko">妖狐</h3>
               <button type="button" onclick="hideYouko()">妖狐を隠す</button>
               <button type="button" onclick="revealYouko()">妖狐を現す</button>
               <div id="youko">
@@ -402,7 +402,7 @@
           <!-- アニムス（Animus） -->
           <section>
             <div class="containment-unit">
-              <h4 id="Animus">アニムス</h4>
+              <h3 id="Animus">アニムス</h3>
               <button type="button" onclick="hideAnimus()">アニムスを隠す</button>
               <button type="button" onclick="revealAnimus()">アニムスを現す</button>
               <div id="animus">
@@ -458,7 +458,7 @@
           <!-- アイン（'Ayn｜عَيْن｜ʿAyn） -->
           <section>
             <div class="containment-unit">
-              <h4 id="ʿAyn">アイン</h4>
+              <h3 id="ʿAyn">アイン</h3>
               <button type="button" onclick="hideAyn()">アインを隠す</button>
               <button type="button" onclick="revealAyn()">アインを現す</button>
               <div id="Ayn">
@@ -511,7 +511,7 @@
           <!-- ボルルマー（Bolormaa｜Болормаа｜ᠪᠣᠯᠣᠷᠮᠠ｜｜Bolurma） -->
           <section>
             <div class="containment-unit">
-              <h4 id="Bolormaa">ボルルマー</h4>
+              <h3 id="Bolormaa">ボルルマー</h3>
               <button type="button" onclick="hideBolormaa()">ボルルマーを隠す</button>
               <button type="button" onclick="revealBolormaa()">ボルルマーを現す</button>
               <div id="bolormaa">
@@ -563,7 +563,7 @@
           <!-- 錯誤（Cuòwù｜錯誤｜错误） -->
           <section>
             <div class="containment-unit">
-              <h4 id="Cuòwù">錯誤</h4>
+              <h3 id="Cuòwù" class="alternate-font">錯誤</h3>
               <button type="button" onclick="hideCuowu()">錯誤達を隠す</button>
               <button type="button" onclick="revealCuowu()">錯誤達を現す</button>
               <div id="Cuowu">
@@ -712,7 +712,7 @@
           <!-- ハップ・Ｐ・エモ＝ション（Hap P. Emo-shun） -->
           <section>
             <div class="containment-unit">
-              <h4 id="Hap_P._Emo-shun">ハップ・Ｐ・エモ＝ション</h4>
+              <h3 id="Hap_P._Emo-shun">ハップ・Ｐ・エモ＝ション</h3>
               <button type="button" onclick="hideHap()">ハップを隠す</button>
               <button type="button" onclick="revealHap()">ハップを現す</button>
               <div id="HapP_Emoshun">
@@ -788,7 +788,7 @@
           <!-- イドラ（Idola） -->
           <section>
             <div class="containment-unit">
-              <h4 id="Idola">イドラ</h4>
+              <h3 id="Idola">イドラ</h3>
               <button type="button" onclick="hideIdola()">イドラを隠す</button>
               <button type="button" onclick="revealIdola()">イドラを現す</button>
               <div id="idola">
@@ -852,7 +852,7 @@
           <!-- エリサベト・ヒディルベギシュヴィリ＝ガルセヴァニシュヴィリ＝ピルツハライシュヴィリ（Elisabed Khidirbegishvili-Garsevanishvili-Pirtskhalaishvili｜ელისაბედ ხიდირბეგიშვილი-გარსევანიშვილი-ფირცხალაიშვილი｜Elisabed Khidirbegishvili-Garsevanishvili-Pirtskhalaishvili） -->
           <section>
             <div class="containment-unit">
-              <h4 id="Elisabed_Khidirbegishvili-Garsevanishvili-Pirtskhalaishvili">エリサベト・ピルツハライシュヴィリ</h4>
+              <h3 id="Elisabed_Khidirbegishvili-Garsevanishvili-Pirtskhalaishvili">エリサベト・ピルツハライシュヴィリ</h3>
               <button type="button" onclick="hideElisabed()">エリサベトを隠す</button>
               <button type="button" onclick="revealElisabed()">エリサベトを現す</button>
               <div id="ElisabedKhidirbegishviliGarsevanishviliPirtskhalaishvili">
@@ -921,7 +921,7 @@
           <!-- オルハ・ユヒミウナ・リトウィナ＝コスチュチェンコ（Olha Yukhymivna Lytvyna-Kostyuchenko｜Олга Юхимівна Литвина-Костюченко｜Olga Yukhymivna Lytvyna-Kostyuchenko） -->
           <section>
             <div class="containment-unit">
-              <h4 id="Olha_Yukhymivna_Lytvyna-Kostyuchenko">オルハ・ユヒミウナ・リトウィナ</h4>
+              <h3 id="Olha_Yukhymivna_Lytvyna-Kostyuchenko">オルハ・ユヒミウナ・リトウィナ</h3>
               <button type="button" onclick="hideOlha()">オルハを隠す</button>
               <button type="button" onclick="revealOlha()">オルハを現す</button>
               <div id="OlhaYukhymivnaLytvynaKostyuchenko">
@@ -979,7 +979,7 @@
           <!-- 孟聖姫（Maeng Song-Hee｜맹성희｜孟聖姬｜Maeng Seonghui） -->
           <section>
             <div class="containment-unit">
-              <h4 id="Maeng_Song-Hee">孟聖姫</h4>
+              <h3 id="Maeng_Song-Hee">孟聖姫</h3>
               <button type="button" onclick="hideSonghee()">聖姫を隠す</button>
               <button type="button" onclick="revealSonghee()">聖姫を現す</button>
               <div id="MaengSongHee">
@@ -1037,7 +1037,7 @@
           <!-- ぬゑさか岸姫（Kishihime Nuwesaka） -->
           <section>
             <div class="containment-unit">
-              <h4 id="Kishihime_Nuwesaka">ぬゑさか岸姫</h4>
+              <h3 id="Kishihime_Nuwesaka">ぬゑさか岸姫</h3>
               <button type="button" onclick="hideKishihime()">岸姫を隠す</button>
               <button type="button" onclick="revealKishihime()">岸姫を現す</button>
               <div id="KishihimeNuwesaka">
@@ -1094,7 +1094,7 @@
           <!-- イリニシュナ・マカロフナ・オブラズツォファ＝スルチェフスカヤ（Ilyinishna Makarovna Obraztsova-Sluchevskaya｜Ильинишна Макаровна Образцова-Случевская｜Il'inishna Makarovna Obraztsova-Sluchevskaya） -->
           <section>
             <div class="containment-unit">
-              <h4 id="Ilyinishna_Makarovna_Obraztsova-Sluchevskaya">イリニシュナ・マカロフナ・オブラズツォファ</h4>
+              <h3 id="Ilyinishna_Makarovna_Obraztsova-Sluchevskaya">イリニシュナ・マカロフナ・オブラズツォファ</h3>
               <button type="button" onclick="hideIlyinishna()">イリィを隠す</button>
               <button type="button" onclick="revealIlyinishna()">イリィを現す</button>
               <div id="IlyinishnaMakarovnaObraztsovaSluchevskaya">
@@ -1151,7 +1151,7 @@
           <!-- サンダ・カイン・テインギ・テ（Sanda Khaing Theingi Htet｜စန္ဒာခိုင်သိင်္ဂီထက်｜Canda Hkuing Singgi Htak） -->
           <section>
             <div class="containment-unit">
-              <h4 id="Sanda_Khaing_Theingi_Htet">サンダ・カイン・テインギ・テ</h4>
+              <h3 id="Sanda_Khaing_Theingi_Htet">サンダ・カイン・テインギ・テ</h3>
               <button type="button" onclick="hideSanda()">サンダを隠す</button>
               <button type="button" onclick="revealSanda()">サンダを現す</button>
               <div id="SandaKhaingTheingiHtet">
@@ -1208,7 +1208,7 @@
           <!-- スカーレット・ウィリアムズ（Scarlett Williams） -->
           <section>
             <div class="containment-unit">
-              <h4 id="Scarlett_Williams">スカーレット・ウィリアムズ</h4>
+              <h3 id="Scarlett_Williams">スカーレット・ウィリアムズ</h3>
               <button type="button" onclick="hideScarlett()">スカーレットを隠す</button>
               <button type="button" onclick="revealScarlett()">スカーレットを現す</button>
               <div id="ScarlettWilliams">
