Added example of usage for Kaoru's pronouns

--- a/html/ushie.html
+++ b/html/ushie.html
@@ -951,7 +951,10 @@
               <p>でも、沖美が第二性染色体を欠いている（ターナー症候群）のと同じように、かをるは余分なＸ性染色体を持っている（トリプルＸ症候群）。<ruby>奴<rt>デル</rt></ruby>の健康に多くの問題を引き起こした。</p>
               <p>かをるは、非言語的で無口である為、コミュニケーションに問題がある。しかし、<ruby>奴<rt>ディ</rt></ruby>と沖美には複雑なジェスチャーのシステムがあり、その問題を回避する為に両者とも使用している。その一つは、かをるが学業などの何でも助けを必要とするたびに尻尾を上下に振っている事である。藤は現在、かをるが家庭で受けている虐待にもかかわらず、<ruby>自閉症スペクトラム障害<rt>ニューロダイバージェンス</rt></ruby>のテストを受けようとしている。</p>
               <p>時々犬の真似をして、犬のように吠える。</p>
-              <p>※書いた代名詞は「あたい」である。</p>
+              <p>
+                ※書いた代名詞は「あたい」である。<br>
+                『di』使用のたとえば：「<span class="neopronoun-demo"><em class="subjective-pronoun" title="Subjective">Di</em> is talking with <em class="reflexive-pronoun" title="Reflexive">demself</em> about <em class="possessive-determiner-pronoun" title="Possessive determiner">dier</em> day. But who is answering <em class="objective-pronoun" title="Objective">dem</em>, though? Are these answers even <em class="possessive-pronoun" title="Possessive">diers</em>?</span>」
+              </p>
               <br>
               <a href="./gallery/ushie/Kaoru_Inugami.html" target="topframe">美術館へ行きますか？</a>
               <br>
